[tool.poetry]
name = "click-use-empty-env"
version = "1.0.0"
description = "A very small addon package to click that restores the ability to use empty values from env variables."
authors = ["Ulrich Petri <python@ulo.pe>"]
repository = "https://github.com/ulope/click-use-emty-env"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
click = ">=7.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
